--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@ news</p>
   
   <!-- Footer -->
   <div class="vg-footer">
-    <h1 class="text-center">Virtual Folio</h1>
+    <h1 class="text-center"></h1>
     <div class="container">
       <div class="row">
       
