--- a/index.html
+++ b/index.html
@@ -87,13 +87,10 @@
               <a href="#about" class="nav-link" data-animate="scrolling">About</a>
             </li>
             <li class="nav-item">
-              <a href="#portfolio" class="nav-link" data-animate="scrolling">Portfolio</a>
+              <a href="#portfolio" class="nav-link" data-animate="scrolling">works</a>
             </li>
             <li class="nav-item">
               <a href="#blog" class="nav-link" data-animate="scrolling">Blog</a>
-            </li>
-            <li class="nav-item">
-              <a href="#contact" class="nav-link" data-animate="scrolling">Contact</a>
             </li>
           </ul>
           <ul class="nav ml-auto">
@@ -318,7 +315,7 @@ news</p>
   <div class="vg-page page-portfolio" id="portfolio">
     <div class="container">
       <div class="text-center wow fadeInUp">
-        <div class="badge badge-subhead">Portfolio</div>
+        <div class="badge badge-subhead"></div>
       </div>
       <h1 class="text-center fw-normal wow fadeInUp">See my work</h1>
       <div class="filterable-button py-3 wow fadeInUp" data-toggle="selected">
