added contact me section

--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@ news</p>
           <form class="vg-contact-form">
             <div class="form-row">
               <div class="col-12 mt-3 wow fadeInUp">
-                <input class="form-control" type="text" name="Name" placeholder="Your Name">
+                <input class="form-control" type=text" name="Name" placeholder="Your Name">
               </div>
               <div class="col-6 mt-3 wow fadeInUp">
                 <input class="form-control" type="text" name="Email" placeholder="Email Address">
@@ -518,7 +518,30 @@ news</p>
         </div>
       </div>
     </div>
-  </div> End Contact -->
+  </div>  -->
+  <!-- End Contact -->
+
+  <!-- Contact -->
+<div class="vg-page page-contact" id="contact">
+  <div class="container-fluid">
+    <div class="text-center wow fadeInUp">
+      <div class="badge badge-subhead">Contact</div>
+    </div>
+    <h1 class="text-center fw-normal wow fadeInUp">Get in touch</h1>
+    <div class="row py-5">
+      <div class="col-lg-7 px-0 pr-lg-3 wow zoomIn">
+        <div class="vg-maps">
+          <div id="google-maps" style="width: 100%; height: 100%;"></div>
+        </div>
+      </div>
+      <div class="col-lg-5">
+        <!-- <iframe src="https://docs.google.com/forms/d/e/YOUR_FORM_ID/viewform?embedded=true" width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe> -->
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfbymlzoUkKYxKG-d74tts8Fvcn5SxF98s2aC2vc7jaEjTwpQ/viewform?embedded=true" width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+      </div>
+    </div>
+  </div>
+</div>
+
   
   <!-- Footer -->
   <div class="vg-footer">
