--- a/index.html
+++ b/index.html
@@ -217,6 +217,14 @@
             <li>
               <div class="title">2023 March - Current</div>
               <div class="details">
+                <h5>AI engineer </h5>
+                <small class="fg-theme">SunTec Business Solutions , Thiruvananthapuram</small>
+                <p>Tasks :<br> confidential</p>
+              </div>
+            </li>
+            <li>
+              <div class="title">2023 March - Current</div>
+              <div class="details">
                 <h5>AI engineer Intern</h5>
                 <small class="fg-theme">SunTec Business Solutions , Thiruvananthapuram</small>
                 <p>Tasks :<br> confidential</p>
