--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       </div>
     </div> <!-- End Navbar -->
     <!-- Caption header -->
-    <div class="caption-header text-center wow zoomInDown">
+    <div class="caption-header text-center wow fadeInUp">
       <h5 class="fw-normal">Welcome</h5>
       <h1 class="fw-light mb-4">I'm <b class="fg-theme">Bharathwajan Rajendran</h1>
       <div class="badge">Developer</div>
@@ -123,7 +123,7 @@
             <li><b>Gender:</b> Male</li>
           </ul>
 
-          <a href="https://drive.google.com/file/d/1k1bpMdu8nezRs6ft_wDoDnxh8B5jZ19u/view?usp=share_link"> <button class="btn btn-theme-outline">Download CV</button><a>
+          <a href="https://drive.google.com/file/d/1fKPtTwt4TH8HHrsS5BxUyK0CTAo_Z0do/view?usp=drive_link"> <button class="btn btn-theme-outline">Download CV</button><a>
         </div>
       </div>
     </div>
@@ -156,40 +156,52 @@
           <ul class="timeline mt-4 pr-md-5">
             <li>
               <div class="title">2024 Aug - Current</div>
-              <div class="details">
-                <h5>Software Engineer</h5>
-                <small class="fg-theme">SunTec Business Solutions , Thiruvananthapuram</small>
+              <div class="details d-flex align-items-center">
+                <img src="assets/img/logo/company_1.svg" alt="SunTec" style="width:32px; height:32px; margin-right:10px;">
+                <div>
+                  <h5>Software Engineer</h5>
+                  <small class="fg-theme">SunTec Business Solutions, Thiruvananthapuram</small>
+                </div>
               </div>
             </li>
             <li>
               <div class="title">2023 Mar - 2024 Aug</div>
-              <div class="details">
-                <h5>Associate Software Engineer</h5>
-                <small class="fg-theme">SunTec Business Solutions , Thiruvananthapuram</small>
+              <div class="details d-flex align-items-center">
+                <img src="assets/img/logo/company_1.svg" alt="SunTec" style="width:32px; height:32px; margin-right:10px;">
+                <div>
+                  <h5>Associate Software Engineer</h5>
+                  <small class="fg-theme">SunTec Business Solutions, Thiruvananthapuram</small>
+                </div>
               </div>
             </li>
             <li>
-              <div class="title">2023 Mar - 2023 Sep</div>
-              <div class="details">
-                <h5>AI engineer Intern</h5>
-                <small class="fg-theme">SunTec Business Solutions , Thiruvananthapuram</small>
-
+              <div class="title">2023 Mar - Sep</div>
+              <div class="details d-flex align-items-center">
+                <img src="assets/img/logo/company_1.svg" alt="SunTec" style="width:32px; height:32px; margin-right:10px;">
+                <div>
+                  <h5>AI Engineer Intern</h5>
+                  <small class="fg-theme">SunTec Business Solutions, Thiruvananthapuram</small>
+                </div>
               </div>
             </li>
             <li>
               <div class="title">2022 Jul - Dec</div>
-              <div class="details">
-                <h5>Data Science Intern</h5>
-                <small class="fg-theme">Cortex N Grey Technologies pvt Ltd CFHE IIT Hyderabad</small>
-
+              <div class="details d-flex align-items-center">
+                <img src="assets/img/logo/company_2.svg" alt="Cortex N Grey" style="width:32px; height:32px; margin-right:10px;">
+                <div>
+                  <h5>Data Science Intern</h5>
+                  <small class="fg-theme">Cortex N Grey Technologies Pvt Ltd CFHE IIT Hyderabad</small>
+                </div>
               </div>
             </li>
             <li>
               <div class="title">2017 Jan-Mar</div>
-              <div class="details">
-                <h5>Freelance Developer</h5>
-                <small class="fg-theme"></small>
-                <p>Developed a Medical Blog site using Django</p>
+              <div class="details d-flex align-items-center">
+                <img src="assets/img/logo/company_3.svg" alt="Freelance" style="width:32px; height:32px; margin-right:10px;">
+                <div>
+                  <h5>Freelance Developer</h5>
+                  <small class="fg-theme"></small>
+                  <p>Developed a Medical Blog site using Django</p>
               </div>
             </li>
           </ul>
